dtos 100% aplicadas falta algumas requisições muito especificas